--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
 //    id 'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -61,11 +62,23 @@ dependencies {
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
     implementation "com.github.bumptech.glide:glide:4.12.0"
-
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation "androidx.preference:preference-ktx:1.2.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation platform('com.google.firebase:firebase-bom:29.2.1')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-storage'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+//    implementation "com.github.pgreze:android-reactions:1.3"
+//    implementation 'com.devlomi:circularstatusview:1.0.1'
+
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 }
